<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.zyneonstudios</groupId>
        <artifactId>application-parent</artifactId>
        <version>2024.4.6</version>
    </parent>

    <artifactId>application-main</artifactId>
    <version>2024.4.7</version>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <!--GitHub repositories from me-->
        <dependency>
            <groupId>com.zyneonstudios</groupId>
            <artifactId>nexus-zyndex</artifactId>
            <version>2024.4.2</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.zyneonstudios</groupId>
            <artifactId>nexus-auth</artifactId>
            <version>2024.4.2</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.zyneonstudios</groupId>
            <artifactId>verget-all</artifactId>
            <version>2024.4.2.2</version>
            <scope>compile</scope>
        </dependency>

        <!--Central repositories by FlowArg-->
        <dependency>
            <groupId>fr.flowarg</groupId>
            <artifactId>flowupdater</artifactId>
            <version>LATEST</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>fr.flowarg</groupId>
            <artifactId>openlauncherlib</artifactId>
            <version>LATEST</version>
            <scope>compile</scope>
        </dependency>

        <!--TIpdwh, btaatm-->
        <dependency>
            <groupId>com.moandjiezana.toml</groupId>
            <artifactId>toml4j</artifactId>
            <version>LATEST</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-compress</artifactId>
            <version>LATEST</version>
        </dependency>
    </dependencies>

    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.2.0</version>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>com.zyneonstudios.Main</mainClass>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                    <release>21</release>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.2.4</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>com.zyneonstudios.Main</mainClass>
                                </transformer>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <artifactId>jdeb</artifactId>
                <groupId>org.vafer</groupId>
                <version>1.10</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>jdeb</goal>
                        </goals>
                        <configuration>
                            <dataSet>
                                <data>
                                    <src>src/deb/updater.jar</src>
                                    <type>file</type>
                                    <mapper>
                                        <type>perm</type>
                                        <filemode>755</filemode>
                                        <prefix>/usr/bin/zyneon/application/</prefix>
                                    </mapper>
                                </data>
                                <data>
                                    <src>src/deb/icon.png</src>
                                    <type>file</type>
                                    <mapper>
                                        <type>perm</type>
                                        <prefix>/usr/bin/zyneon/application/</prefix>
                                    </mapper>
                                </data>
                                <data>
                                    <src>src/deb/zyneon-application.desktop</src>
                                    <type>file</type>
                                    <mapper>
                                        <type>perm</type>
                                        <filemode>755</filemode>
                                        <prefix>/usr/share/applications/</prefix>
                                    </mapper>
                                </data>
                            </dataSet>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.3.1</version>
                <configuration>
                    <nonFilteredFileExtensions>
                        <nonFilteredFileExtension>eot</nonFilteredFileExtension>
                        <nonFilteredFileExtension>ttf</nonFilteredFileExtension>
                        <nonFilteredFileExtension>woff</nonFilteredFileExtension>
                        <nonFilteredFileExtension>woff2</nonFilteredFileExtension>
                        <nonFilteredFileExtension>zip</nonFilteredFileExtension>
                    </nonFilteredFileExtensions>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>